--- a/doc/toml/gy6or6_train.toml
+++ b/doc/toml/gy6or6_train.toml
@@ -18,6 +18,8 @@ labelset = "iabcdefghjk"
 train_dur = 50
 # val_dur: duration of validation split in dataset, in seconds
 val_dur = 15
+# test_dur: duration of test split in dataset, in seconds
+val_dur = 30
 
 # SPECT_PARAMS: parameters for computing spectrograms
 [SPECT_PARAMS]
@@ -32,7 +34,7 @@ step_size = 64
 # model: the string name of the model. must be a name within `vak.models` or added e.g. with `vak.model.decorators.model`
 model = "TweetyNet"
 # root_results_dir: directory where results should be saved, as a sub-directory within `root_results_dir`
-root_results_dir = "/PATH/TO/DATA/vak/train/results"
+root_results_dir = "/PATH/TO/DATA/vak/results/train"
 # batch_size: number of samples from dataset per batch fed into network
 batch_size = 8
 # num_epochs: number of training epochs, where an epoch is one iteration through all samples in training split
@@ -54,6 +56,7 @@ patience = 4
 num_workers = 4
 # device: name of device to run model on, one of "cuda", "cpu"
 device = "cuda"
+# dataset_path : path to dataset created by prep. This will be added when you run `vak prep`, you don't have to add it
 
 # train_dataset_params: parameters used when loading training dataset
 # for a frame classification model, we use a WindowDataset with a specific `window_size`
