--- a/doc/toml/gy6or6_eval.toml
+++ b/doc/toml/gy6or6_eval.toml
@@ -1,18 +1,22 @@
-# PREP: options for preparing dataset
 [PREP]
 # dataset_type: corresponds to the model family such as "frame classification" or "parametric umap"
 dataset_type = "frame classification"
 # input_type: input to model, either audio ("audio") or spectrogram ("spect")
 input_type = "spect"
 # data_dir: directory with data to use when preparing dataset
-data_dir = "/PATH/TO/DATA/032312"
+data_dir = "/PATH/TO/DATA/032212"
 # output_dir: directory where dataset will be created (as a sub-directory within output_dir)
-output_dir = "/PATH/TO/DATA/vak/prep/predict"
+output_dir = "/PATH/TO/DATA/vak/prep/train"
 # audio_format: format of audio, either wav or cbin
 audio_format = "wav"
-# note that for predictions we don't need to specify labelset or annot_format
-# note also that we do not specify train_dur / val_dur / test_dur;
-# all data found in `data_dir` will be assigned to a "predict split" instead
+# annot_format: format of annotations
+annot_format = "simple-seq"
+# labelset: string or array with unique set of labels used in annotations
+labelset = "iabcdefghjk"
+# train_dur: duration of training split in dataset, in seconds
+train_dur = 50
+# val_dur: duration of validation split in dataset, in seconds
+val_dur = 15
 
 # SPECT_PARAMS: parameters for computing spectrograms
 [SPECT_PARAMS]
@@ -22,32 +26,33 @@ fft_size = 512
 # also known as hop size
 step_size = 64
 
-# PREDICT: options for generating predictions with a trained model
-[PREDICT]
-# model: the string name of the model. must be a name within `vak.models` or added e.g. with `vak.model.decorators.model`
+# EVAL: options for evaluating a trained model. This is done using the "test" split.
+[EVAL]
 model = "TweetyNet"
 # checkpoint_path: path to saved model checkpoint
-checkpoint_path = "/PATH/TO/DATA/vak/train/RESULTS_TIMESTAMP/TweetyNet/checkpoints/max-val-acc-checkpoint.pt"
+checkpoint_path = "/PATH/TO/DATA/vak/results/train/RESULTS_TIMESTAMP/TweetyNet/checkpoints/max-val-acc-checkpoint.pt"
 # labelmap_path: path to file that maps from outputs of model (integers) to text labels in annotations;
 # this is used when generating predictions
-labelmap_path = "/PATH/TO/DATA/vak/train/RESULTS_TIMESTAMP/labelmap.json"
+labelmap_path = "/PATH/TO/DATA/vak/results/train/RESULTS_TIMESTAMP/labelmap.json"
 # spect_scaler_path: path to file containing SpectScaler that was fit to training set
 # We want to transform the data we predict on in the exact same way
-spect_scaler_path = "/PATH/TO/DATA/vak/train/RESULTS_TIMESTAMP/StandardizeSpect"
+spect_scaler_path = "/PATH/TO/DATA/vak/results/train/RESULTS_TIMESTAMP/StandardizeSpect"
 # batch_size
 # for predictions with a frame classification model, this should always be 1
 # and will be ignored if it's not
-batch_size = 1
+batch_size = 11
 # num_workers: number of workers to use when loading data with multiprocessing
-num_workers = 4
+num_workers = 16
 # device: name of device to run model on, one of "cuda", "cpu"
 device = "cuda"
 # output_dir: directory where output should be saved, as a sub-directory within `output_dir`
-output_dir = "/PATH/TO/DATA/vak/results/predict"
-# annot_csv_filename
-annot_csv_filename = "gy6or6.032312.annot.csv"
-# The next two options are for post-processing transforms.
-# Both these transforms require that there is an "unlabeled" label,
+output_dir = "/PATH/TO/DATA/vak/results/eval"
+# dataset_path : path to dataset created by prep
+# ADD THE dataset_path OPTION FROM THE TRAIN FILE HERE (we already created a test split when we ran `vak prep` with that config)
+
+# EVAL.post_tfm_kwargs: options for post-processing
+[EVAL.post_tfm_kwargs]
+# both these transforms require that there is an "unlabeled" label,
 # and they will only be applied to segments that are bordered on both sides
 # by the "unlabeled" label.
 # Such a label class is added by default by vak.
@@ -58,12 +63,12 @@ majority_vote = true
 # min_segment_dur: post-processing transformation removes any segments
 # with a duration shorter than `min_segment_dur` that do not have the 'unlabeled' class.
 # Only applied if this option is specified.
-min_segment_dur = 0.01
+min_segment_dur = 0.02
 
 # transform_params: parameters used when transforming data
 # for a frame classification model, we use FrameDataset with the eval_item_transform,
 # that reshapes batches into consecutive adjacent windows with a specific `window_size`
-[PREDICT.transform_params]
-window_size = 176
+[EVAL.transform_params]
+window_size = 88
 
 # Note we do not specify any options for the network, and just use the defaults
