Change 3 configs to have spect_format option set to npz

--- a/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
@@ -3,7 +3,7 @@ dataset_type = "frame classification"
 input_type = "spect"
 data_dir = "./tests/data_for_tests/source/audio_cbin_annot_notmat/gy6or6/032312"
 output_dir = "./tests/data_for_tests/generated/prep/learncurve/audio_cbin_annot_notmat/TweetyNet"
-audio_format = "cbin"
+spect_format = "npz"
 annot_format = "notmat"
 labelset = "iabcdefghjk"
 train_dur = 50
