--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           nox -s test-data-download-source
           nox -s test-data-download-generated-ci
-          nox -s coverage --verbose
+          pip install .[test]
+          pytest --cov=./ --cov-report=xml
       - name: upload code coverage
         uses: codecov/codecov-action@v3
