DOC: Add missing DATALOADER section to example config [skip ci]

--- a/doc/toml/gy6or6_predict.toml
+++ b/doc/toml/gy6or6_predict.toml
@@ -22,3 +22,6 @@ output_dir = "/PATH/TO/DATA/vak/prep/predict"
 annot_csv_filename = "gy6or6.032312.annot.csv"
 majority_vote = true
 min_segment_dur = 0.01
+
+[DATALOADER]
+window_size = 176
