Add vocalpy as dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "torchvision >=0.15.2",
     "tqdm >=4.42.1",
     "umap-learn >=0.5.3",
+    "vocalpy >=0.6.0",
 ]
 
 [project.optional-dependencies]
