--- a/src/vak/config/valid.toml
+++ b/src/vak/config/valid.toml
@@ -24,6 +24,7 @@ num_replicates = 2
 context_s = 0.005
 max_dur = 0.2
 target_shape = [128, 128]
+normalize = true
 
 [SPECT_PARAMS]
 fft_size = 512
