--- a/doc/toml/gy6or6_predict.toml
+++ b/doc/toml/gy6or6_predict.toml
@@ -5,9 +5,9 @@ dataset_type = "frame classification"
 # input_type: input to model, either audio ("audio") or spectrogram ("spect")
 input_type = "spect"
 # data_dir: directory with data to use when preparing dataset
-data_dir = "/PATH/TO/DATA/032312"
+data_dir = "/PATH/TO/FOLDER/gy6or6/032312"
 # output_dir: directory where dataset will be created (as a sub-directory within output_dir)
-output_dir = "/PATH/TO/DATA/vak/prep/predict"
+output_dir = "/PATH/TO/FOLDER/prep/predict"
 # audio_format: format of audio, either wav or cbin
 audio_format = "wav"
 # note that for predictions we don't need to specify labelset or annot_format
@@ -27,13 +27,13 @@ step_size = 64
 # model: the string name of the model. must be a name within `vak.models` or added e.g. with `vak.model.decorators.model`
 model = "TweetyNet"
 # checkpoint_path: path to saved model checkpoint
-checkpoint_path = "/PATH/TO/DATA/vak/train/RESULTS_TIMESTAMP/TweetyNet/checkpoints/max-val-acc-checkpoint.pt"
+checkpoint_path = "/PATH/TO/FOLDER/results/train/RESULTS_TIMESTAMP/TweetyNet/checkpoints/max-val-acc-checkpoint.pt"
 # labelmap_path: path to file that maps from outputs of model (integers) to text labels in annotations;
 # this is used when generating predictions
-labelmap_path = "/PATH/TO/DATA/vak/train/RESULTS_TIMESTAMP/labelmap.json"
+labelmap_path = "/PATH/TO/FOLDER/results/train/RESULTS_TIMESTAMP/labelmap.json"
 # spect_scaler_path: path to file containing SpectScaler that was fit to training set
 # We want to transform the data we predict on in the exact same way
-spect_scaler_path = "/PATH/TO/DATA/vak/train/RESULTS_TIMESTAMP/StandardizeSpect"
+spect_scaler_path = "/PATH/TO/FOLDER/results/train/RESULTS_TIMESTAMP/StandardizeSpect"
 # batch_size
 # for predictions with a frame classification model, this should always be 1
 # and will be ignored if it's not
@@ -43,7 +43,7 @@ num_workers = 4
 # device: name of device to run model on, one of "cuda", "cpu"
 device = "cuda"
 # output_dir: directory where output should be saved, as a sub-directory within `output_dir`
-output_dir = "/PATH/TO/DATA/vak/results/predict"
+output_dir = "/PATH/TO/FOLDER/results/predict"
 # annot_csv_filename
 annot_csv_filename = "gy6or6.032312.annot.csv"
 # The next two options are for post-processing transforms.
@@ -59,6 +59,7 @@ majority_vote = true
 # with a duration shorter than `min_segment_dur` that do not have the 'unlabeled' class.
 # Only applied if this option is specified.
 min_segment_dur = 0.01
+# dataset_path : path to dataset created by prep. This will be added when you run `vak prep`, you don't have to add it
 
 # transform_params: parameters used when transforming data
 # for a frame classification model, we use FrameDataset with the eval_item_transform,
@@ -67,3 +68,5 @@ min_segment_dur = 0.01
 window_size = 176
 
 # Note we do not specify any options for the network, and just use the defaults
+# We need to put this "dummy" table here though for the config to parse correctly
+[TweetyNet]
