--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ license = {file = "LICENSE"}
 dependencies = [
     "attrs >=19.3.0",
     "crowsetta >=5.0.1",
-    "dask >=2.10.1",
+    "dask[dataframe] >=2.10.1",
     "evfuncs >=0.3.4",
     "joblib >=0.14.1",
     "pytorch-lightning >=2.0.7",
