WIP: Change table names in config files in tests/data_for_tests/configs

--- a/tests/data_for_tests/configs/ConvEncoderUMAP_eval_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/ConvEncoderUMAP_eval_audio_cbin_annot_notmat.toml
@@ -1,4 +1,4 @@
-[PREP]
+[vak.prep]
 dataset_type = "parametric umap"
 input_type = "spect"
 data_dir = "./tests/data_for_tests/source/audio_cbin_annot_notmat/gy6or6/032412"
@@ -8,20 +8,19 @@ annot_format = "notmat"
 labelset = "iabcdefghjk"
 test_dur = 0.2
 
-[SPECT_PARAMS]
+[vak.prep.spect_params]
 fft_size = 512
 step_size = 32
 transform_type = "log_spect_plus_one"
 
-[EVAL]
+[vak.eval]
 checkpoint_path = "tests/data_for_tests/generated/results/train/audio_cbin_annot_notmat/ConvEncoderUMAP/results_230727_210112/ConvEncoderUMAP/checkpoints/checkpoint.pt"
-model = "ConvEncoderUMAP"
 batch_size = 64
 num_workers = 16
 device = "cuda"
 output_dir = "./tests/data_for_tests/generated/results/eval/audio_cbin_annot_notmat/ConvEncoderUMAP"
 
-[ConvEncoderUMAP.network]
+[vak.eval.model.ConvEncoderUMAP.network]
 conv1_filters = 8
 conv2_filters = 16
 conv_kernel_size = 3
@@ -30,5 +29,5 @@ conv_padding = 1
 n_features_linear = 32
 n_components = 2
 
-[ConvEncoderUMAP.optimizer]
+[vak.eval.model.ConvEncoderUMAP.optimizer]
 lr = 0.001
