--- a/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
@@ -1,4 +1,4 @@
-[PREP]
+[vak.prep]
 dataset_type = "parametric umap"
 input_type = "spect"
 data_dir = "./tests/data_for_tests/source/audio_cbin_annot_notmat/gy6or6/032312"
@@ -10,12 +10,12 @@ train_dur = 0.5
 val_dur = 0.2
 test_dur = 0.25
 
-[SPECT_PARAMS]
+[vak.prep.spect_params]
 fft_size = 512
 step_size = 32
 transform_type = "log_spect_plus_one"
 
-[TRAIN]
+[vak.train]
 model = "ConvEncoderUMAP"
 batch_size = 64
 num_epochs = 1
