--- a/tests/data_for_tests/configs/TweetyNet_train_spect_mat_annot_yarden.toml
+++ b/tests/data_for_tests/configs/TweetyNet_train_spect_mat_annot_yarden.toml
@@ -1,4 +1,4 @@
-[PREP]
+[vak.prep]
 dataset_type = "frame classification"
 input_type = "spect"
 data_dir = "./tests/data_for_tests/source/spect_mat_annot_yarden/llb3/spect"
@@ -10,14 +10,14 @@ labelset = "range: 1-3,6-14,17-19"
 train_dur = 213
 val_dur = 213
 
-[SPECT_PARAMS]
+[vak.prep.spect_params]
 fft_size = 512
 step_size = 64
 freq_cutoffs = [ 500, 10000,]
 thresh = 6.25
 transform_type = "log_spect"
 
-[TRAIN]
+[vak.train]
 model = "TweetyNet"
 normalize_spectrograms = false
 batch_size = 11
@@ -29,10 +29,10 @@ num_workers = 16
 device = "cuda"
 root_results_dir = "./tests/data_for_tests/generated/results/train/spect_mat_annot_yarden/TweetyNet"
 
-[TRAIN.train_dataset_params]
+[vak.train.train_dataset_params]
 window_size = 88
 
-[TRAIN.val_transform_params]
+[vak.train.val_transform_params]
 window_size = 88
 
 [TweetyNet.network]
