--- a/tests/data_for_tests/configs/invalid_option_config.toml
+++ b/tests/data_for_tests/configs/invalid_option_config.toml
@@ -1,7 +1,7 @@
 # used to test that invalid option 'ouput_dir' (instead of 'output_dir')
 # raises a ValueError when passed to
 # vak.config.validators.are_options_valid
-[PREP]
+[vak.prep]
 dataset_type = "frame classification"
 input_type = "spect"
 data_dir = '/home/user/data/subdir/'
@@ -20,7 +20,7 @@ freq_cutoffs = [500, 10000]
 thresh = 6.25
 transform_type = 'log_spect'
 
-[TRAIN]
+[vak.train]
 model = 'TweetyNet'
 root_results_dir = '/home/user/data/subdir/'
 normalize_spectrograms = true
@@ -30,7 +30,7 @@ val_error_step = 1
 checkpoint_step = 1
 save_only_single_checkpoint_file = true
 
-[TRAIN.dataset_params]
+[vak.train.dataset_params]
 window_size = 88
 
 [TweetyNet.optimizer]
