--- a/tests/data_for_tests/configs/invalid_train_and_learncurve_config.toml
+++ b/tests/data_for_tests/configs/invalid_train_and_learncurve_config.toml
@@ -1,4 +1,4 @@
-[PREP]
+[vak.prep]
 dataset_type = "frame classification"
 input_type = "spect"
 data_dir = "./tests/data_for_tests/source/cbins/gy6or6/032312"
@@ -10,7 +10,7 @@ train_dur = 50
 val_dur = 15
 test_dur = 30
 
-[SPECT_PARAMS]
+[vak.prep.spect_params]
 fft_size=512
 step_size=64
 freq_cutoffs = [500, 10000]
@@ -18,8 +18,8 @@ thresh = 6.25
 transform_type = "log_spect"
 
 # this .toml file should cause 'vak.config.parse.from_toml' to raise a ValueError
-# because it defines both a TRAIN and a LEARNCURVE section
-[TRAIN]
+# because it defines both a vak.train and a vak.learncurve section
+[vak.train]
 model = "TweetyNet"
 normalize_spectrograms = true
 batch_size = 11
@@ -31,7 +31,7 @@ num_workers = 16
 device = "cuda"
 root_results_dir = "./tests/data_for_tests/generated/results/train/audio_cbin_annot_notmat"
 
-[LEARNCURVE]
+[vak.learncurve]
 model = 'TweetyNet'
 normalize_spectrograms = true
 batch_size = 11
