Make tomlkit a dependency in pyproject.toml, drop toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "SoundFile >=0.10.3",
     "pandas >=1.0.1",
     "tensorboard >=2.8.0",
-    "toml >=0.10.2",
+    "tomlkit >=0.12.4",
     "torch >= 2.0.1",
     "torchvision >=0.15.2",
     "tqdm >=4.42.1",
