--- a/doc/toml/gy6or6_predict.toml
+++ b/doc/toml/gy6or6_predict.toml
@@ -1,5 +1,5 @@
 # PREP: options for preparing dataset
-[PREP]
+[vak.prep]
 # dataset_type: corresponds to the model family such as "frame classification" or "parametric umap"
 dataset_type = "frame classification"
 # input_type: input to model, either audio ("audio") or spectrogram ("spect")
@@ -15,7 +15,7 @@ audio_format = "wav"
 # all data found in `data_dir` will be assigned to a "predict split" instead
 
 # SPECT_PARAMS: parameters for computing spectrograms
-[SPECT_PARAMS]
+[vak.prep.spect_params]
 # fft_size: size of window used for Fast Fourier Transform, in number of samples
 fft_size = 512
 # step_size: size of step to take when computing spectra with FFT for spectrogram
@@ -23,7 +23,7 @@ fft_size = 512
 step_size = 64
 
 # PREDICT: options for generating predictions with a trained model
-[PREDICT]
+[vak.predict]
 # model: the string name of the model. must be a name within `vak.models` or added e.g. with `vak.model.decorators.model`
 model = "TweetyNet"
 # checkpoint_path: path to saved model checkpoint
@@ -64,9 +64,9 @@ min_segment_dur = 0.01
 # transform_params: parameters used when transforming data
 # for a frame classification model, we use FrameDataset with the eval_item_transform,
 # that reshapes batches into consecutive adjacent windows with a specific `window_size`
-[PREDICT.transform_params]
+[vak.predict.transform_params]
 window_size = 176
 
 # Note we do not specify any options for the network, and just use the defaults
 # We need to put this "dummy" table here though for the config to parse correctly
-[TweetyNet]
+[vak.predict.model.TweetyNet]
