Fix model tables in tests/data_for_tests/configs

--- a/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
@@ -20,7 +20,6 @@ thresh = 6.25
 transform_type = "log_spect"
 
 [vak.learncurve]
-model = "TweetyNet"
 normalize_spectrograms = true
 batch_size = 11
 num_epochs = 2
@@ -41,7 +40,7 @@ window_size = 88
 [vak.learncurve.val_transform_params]
 window_size = 88
 
-[TweetyNet.network]
+[vak.learncurve.model.TweetyNet.network]
 conv1_filters = 8
 conv1_kernel_size = [3, 3]
 conv2_filters = 16
@@ -52,5 +51,5 @@ pool2_size = [4, 1]
 pool2_stride = [4, 1]
 hidden_size = 32
 
-[TweetyNet.optimizer]
+[vak.learncurve.model.TweetyNet.optimizer]
 lr = 0.001
