--- a/tests/data_for_tests/configs/invalid_option_config.toml
+++ b/tests/data_for_tests/configs/invalid_option_config.toml
@@ -21,7 +21,6 @@ thresh = 6.25
 transform_type = 'log_spect'
 
 [vak.train]
-model = 'TweetyNet'
 root_results_dir = '/home/user/data/subdir/'
 normalize_spectrograms = true
 num_epochs = 2
@@ -33,5 +32,5 @@ save_only_single_checkpoint_file = true
 [vak.train.dataset_params]
 window_size = 88
 
-[TweetyNet.optimizer]
+[vak.train.model.TweetyNet.optimizer]
 learning_rate = 0.001
