--- a/tests/data_for_tests/configs/invalid_key_config.toml
+++ b/tests/data_for_tests/configs/invalid_key_config.toml
@@ -1,11 +1,12 @@
-# used to test that invalid option 'ouput_dir' (instead of 'output_dir')
+# used to test that invalid key 'ouput_dir' (instead of 'output_dir')
 # raises a ValueError when passed to
-# vak.config.validators.are_options_valid
+# vak.config.validators.are_keys_valid
 [vak.prep]
 dataset_type = "frame classification"
 input_type = "spect"
 data_dir = '/home/user/data/subdir/'
-ouput_dir = '/why/do/i/keep/typing/ouput'  # <-- invalid option 'ouput' instead of 'output'
+# next line, invalid key 'ouput' instead of 'output'
+ouput_dir = '/why/do/i/keep/typing/ouput'
 audio_format = 'cbin'
 annot_format = 'notmat'
 labelset = 'iabcdefghjk'
