--- a/src/vak/config/valid-version-1.0.toml
+++ b/src/vak/config/valid-version-1.0.toml
@@ -34,9 +34,7 @@ timebins_key = 't'
 audio_path_key = 'audio_path'
 
 [vak.train]
-model = 'TweetyNet'
 root_results_dir = './tests/test_data/results/train'
-dataset_path = 'tests/test_data/prep/train/032312_prep_191224_225912.csv'
 num_workers = 4
 device = 'cuda'
 batch_size = 11
@@ -54,12 +52,17 @@ train_dataset_params = {'window_size' = 80}
 val_transform_params = {'resize' = 128}
 val_dataset_params = {'window_size' = 80}
 
+[vak.train.dataset]
+name = 'IntlDistributedSongbirdConsortiumPack'
+path = 'tests/test_data/prep/train/032312_prep_191224_225912.csv'
+splits_path = 'tests/test_data/prep/train/032312_prep_191224_225912.splits.json'
+
+[vak.train.model.TweetyNet]
+
 [vak.eval]
-dataset_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
 checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
 labelmap_path = '/home/user/results_181014_194418/labelmap.json'
 output_dir = './tests/test_data/prep/learncurve'
-model = 'TweetyNet'
 batch_size = 11
 num_workers = 4
 device = 'cuda'
@@ -68,8 +71,14 @@ post_tfm_kwargs = {'majority_vote' = true, 'min_segment_dur' = 0.01}
 transform_params = {'resize' = 128}
 dataset_params = {'window_size' = 80}
 
+[vak.eval.dataset]
+name = 'IntlDistributedSongbirdConsortiumPack'
+path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
+splits_path = 'tests/test_data/prep/train/032312_prep_191224_225912.splits.json'
+
+[vak.eval.model.TweetyNet]
+
 [vak.learncurve]
-model = 'TweetyNet'
 root_results_dir = './tests/test_data/results/learncurve'
 batch_size = 11
 num_epochs = 2
@@ -78,7 +87,6 @@ shuffle = true
 val_step = 1
 ckpt_step = 1
 patience = 4
-dataset_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
 results_dir_made_by_main_script = '/some/path/to/learncurve/'
 post_tfm_kwargs = {'majority_vote' = true, 'min_segment_dur' = 0.01}
 num_workers = 4
@@ -88,13 +96,18 @@ train_dataset_params = {'window_size' = 80}
 val_transform_params = {'resize' = 128}
 val_dataset_params = {'window_size' = 80}
 
+[vak.learncurve.dataset]
+name = 'IntlDistributedSongbirdConsortiumPack'
+path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
+splits_path = 'tests/test_data/prep/train/032312_prep_191224_225912.splits.json'
+
+[vak.learncurve.model.TweetyNet]
+
 [vak.predict]
-dataset_path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
 checkpoint_path = '/home/user/results_181014_194418/TweetyNet/checkpoints/'
 labelmap_path = '/home/user/results_181014_194418/labelmap.json'
 annot_csv_filename = '032312_prep_191224_225910.annot.csv'
 output_dir = './tests/test_data/prep/learncurve'
-model = 'TweetyNet'
 batch_size = 11
 num_workers = 4
 device = 'cuda'
@@ -104,3 +117,10 @@ majority_vote = false
 save_net_outputs = false
 transform_params = {'resize' = 128}
 dataset_params = {'window_size' = 80}
+
+[vak.predict.dataset]
+name = 'IntlDistributedSongbirdConsortiumPack'
+path = 'tests/test_data/prep/learncurve/032312_prep_191224_225910.csv'
+splits_path = 'tests/test_data/prep/train/032312_prep_191224_225912.splits.json'
+
+[vak.predict.model.TweetyNet]
