Change transform/dataset params keys in data_for_tests/configs to a dataset table with a params key

--- a/tests/data_for_tests/configs/TweetyNet_train_spect_mat_annot_yarden.toml
+++ b/tests/data_for_tests/configs/TweetyNet_train_spect_mat_annot_yarden.toml
@@ -28,10 +28,7 @@ num_workers = 16
 device = "cuda"
 root_results_dir = "./tests/data_for_tests/generated/results/train/spect_mat_annot_yarden/TweetyNet"
 
-[vak.train.train_dataset_params]
-window_size = 88
-
-[vak.train.val_transform_params]
+[vak.train.dataset.params]
 window_size = 88
 
 [vak.train.model.TweetyNet.network]
