--- a/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
@@ -34,10 +34,7 @@ root_results_dir = "./tests/data_for_tests/generated/results/learncurve/audio_cb
 majority_vote = true
 min_segment_dur = 0.02
 
-[vak.learncurve.train_dataset_params]
-window_size = 88
-
-[vak.learncurve.val_transform_params]
+[vak.learncurve.dataset.params]
 window_size = 88
 
 [vak.learncurve.model.TweetyNet.network]
