Make vak.table.dataset.params into an in-line table in toml files in tests/data_for_tests/configs

--- a/tests/data_for_tests/configs/TweetyNet_eval_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_eval_audio_cbin_annot_notmat.toml
@@ -27,8 +27,8 @@ output_dir = "./tests/data_for_tests/generated/results/eval/audio_cbin_annot_not
 majority_vote = true
 min_segment_dur = 0.02
 
-[vak.eval.dataset.params]
-window_size = 88
+[vak.eval.dataset]
+params = { window_size = 88 }
 
 [vak.eval.model.TweetyNet.network]
 conv1_filters = 8
