--- a/tests/data_for_tests/configs/TweetyNet_predict_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_predict_audio_cbin_annot_notmat.toml
@@ -22,8 +22,8 @@ device = "cuda"
 output_dir = "./tests/data_for_tests/generated/results/predict/audio_cbin_annot_notmat/TweetyNet"
 annot_csv_filename = "bl26lb16.041912.annot.csv"
 
-[vak.predict.dataset.params]
-window_size = 88
+[vak.predict.dataset]
+params = { window_size = 88 }
 
 [vak.predict.model.TweetyNet.network]
 conv1_filters = 8
