--- a/tests/data_for_tests/configs/invalid_key_config.toml
+++ b/tests/data_for_tests/configs/invalid_key_config.toml
@@ -30,8 +30,8 @@ val_error_step = 1
 checkpoint_step = 1
 save_only_single_checkpoint_file = true
 
-[vak.train.dataset_params]
-window_size = 88
+[vak.train.dataset]
+params = { window_size = 88 }
 
 [vak.train.model.TweetyNet.optimizer]
 learning_rate = 0.001
