--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "dask[dataframe] >=2.10.1",
     "evfuncs >=0.3.4",
     "joblib >=0.14.1",
-    "pytorch-lightning >=2.0.7",
+    "lightning >=2.0.7",
     "matplotlib >=3.3.3",
     "numpy >=1.18.1",
     "pynndescent >=0.5.10",
