Add trainer sub-table to all configs in tests/data_for_tests/configs

--- a/tests/data_for_tests/configs/ConvEncoderUMAP_eval_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/ConvEncoderUMAP_eval_audio_cbin_annot_notmat.toml
@@ -31,3 +31,7 @@ n_components = 2
 
 [vak.eval.model.ConvEncoderUMAP.optimizer]
 lr = 0.001
+
+[vak.eval.trainer]
+accelerator = "gpu"
+devices = [0]
