--- a/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/ConvEncoderUMAP_train_audio_cbin_annot_notmat.toml
@@ -35,3 +35,7 @@ n_components = 2
 
 [vak.train.model.ConvEncoderUMAP.optimizer]
 lr = 0.001
+
+[vak.train.trainer]
+accelerator = "gpu"
+devices = [0]
