--- a/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_learncurve_audio_cbin_annot_notmat.toml
@@ -50,3 +50,7 @@ hidden_size = 32
 
 [vak.learncurve.model.TweetyNet.optimizer]
 lr = 0.001
+
+[vak.learncurve.trainer]
+accelerator = "gpu"
+devices = [0]
