--- a/tests/data_for_tests/configs/invalid_table_config.toml
+++ b/tests/data_for_tests/configs/invalid_table_config.toml
@@ -32,3 +32,7 @@ save_only_single_checkpoint_file = true
 
 [vak.train.model.TweetyNet.optimizer]
 learning_rate = 0.001
+
+[vak.train.trainer]
+accelerator = "gpu"
+devices = [0]
