--- a/tests/data_for_tests/configs/TweetyNet_predict_audio_cbin_annot_notmat.toml
+++ b/tests/data_for_tests/configs/TweetyNet_predict_audio_cbin_annot_notmat.toml
@@ -38,3 +38,7 @@ hidden_size = 32
 
 [vak.predict.model.TweetyNet.optimizer]
 lr = 0.001
+
+[vak.predict.trainer]
+accelerator = "gpu"
+devices = [0]
