--- a/doc/toml/gy6or6_predict.toml
+++ b/doc/toml/gy6or6_predict.toml
@@ -67,3 +67,10 @@ window_size = 176
 # Note we do not specify any options for the network, and just use the defaults
 # We need to put this table here though, to indicate which model we are using.
 [vak.predict.model.TweetyNet]
+
+# this sub-table configures the `lightning.pytorch.Trainer`
+[vak.predict.trainer]
+# setting to 'gpu' means "train models on 'gpu' (not 'cpu')"
+accelerator = "gpu"
+# use the first GPU (numbering starts from 0)
+devices = [0]
